--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "alpha-test",
+  "homepage": ".",
+  "name": "anime-get-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
